edm : update Toucan default config; remove console

--- a/arch/arm/configs/edm1_cf_imx6_toucan_defconfig
+++ b/arch/arm/configs/edm1_cf_imx6_toucan_defconfig
@@ -1055,9 +1055,9 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_MAX3107 is not set
 # CONFIG_SERIAL_MFD_HSU is not set
 CONFIG_SERIAL_IMX=y
-CONFIG_SERIAL_IMX_CONSOLE=y
+CONFIG_NO_CONSOLE=y
+# CONFIG_SERIAL_IMX_CONSOLE is not set
 CONFIG_SERIAL_CORE=y
-CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_JSM is not set
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
