edm1-cf-imx6 : add support for secure RTC in fairy default config

--- a/arch/arm/configs/edm1_cf_imx6_fairy_defconfig
+++ b/arch/arm/configs/edm1_cf_imx6_fairy_defconfig
@@ -309,6 +309,7 @@ CONFIG_EDM_EXPANSION=y
 CONFIG_EDM_BASEBOARD_FAIRY=y
 # CONFIG_EDM_EXPANSION_FWBADAPT is not set
 # CONFIG_EDM_EXPANSION_WANDQC is not set
+# CONFIG_EDM_BASEBOARD_TOUCAN is not set
 
 #
 # MX6 Options:
@@ -1054,6 +1055,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_MAX3107 is not set
 # CONFIG_SERIAL_MFD_HSU is not set
 CONFIG_SERIAL_IMX=y
+# CONFIG_NO_CONSOLE is not set
 CONFIG_SERIAL_IMX_CONSOLE=y
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
@@ -2080,8 +2082,8 @@ CONFIG_RTC_DRV_DS1307=y
 # CONFIG_RTC_DRV_M48T35 is not set
 # CONFIG_RTC_DRV_M48T59 is not set
 # CONFIG_RTC_DRV_MSM6242 is not set
-# CONFIG_RTC_MXC is not set
-# CONFIG_RTC_DRV_MXC_V2 is not set
+CONFIG_RTC_MXC=y
+CONFIG_RTC_DRV_MXC_V2=y
 CONFIG_RTC_DRV_SNVS=y
 # CONFIG_RTC_DRV_BQ4802 is not set
 # CONFIG_RTC_DRV_RP5C01 is not set
