--- a/arch/arm/boot/dts/imx6ul-picosom-hobbit.dts
+++ b/arch/arm/boot/dts/imx6ul-picosom-hobbit.dts
@@ -288,6 +288,10 @@
 		};
 	};
 
+	adc: adc081c {
+		compatible = "ti,adc081c";
+		reg = <0x50>;
+	};
 };
 
 &i2c2 {
@@ -295,6 +299,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2>;
 	status = "okay";
+
 };
 
 &i2c3 {
@@ -680,7 +685,7 @@
 
 	spidev@0 {
 		compatible = "spidev";
-		spi-max-frequency = <30000000>;
+		spi-max-frequency = <60000000>;
 		reg = <0>;
 	};
 };
