--- a/arch/arm/configs/picosom-imx6ul_defconfig
+++ b/arch/arm/configs/picosom-imx6ul_defconfig
@@ -245,6 +245,7 @@ CONFIG_MXS_DMA=y
 CONFIG_STAGING=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_IIO=y
+CONFIG_TI_ADC081C=y
 CONFIG_MAG3110=y
 CONFIG_PWM=y
 CONFIG_PWM_IMX=y
