--- a/arch/arm/configs/edm-cf-imx_defconfig
+++ b/arch/arm/configs/edm-cf-imx_defconfig
@@ -319,6 +319,7 @@ CONFIG_SND_SOC_FSL_ESAI=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_SII902X=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
+CONFIG_SND_SOC_IMX_TLV320AIC3X=y
 CONFIG_SND_SOC_IMX_SPDIF=y
 CONFIG_SND_SOC_IMX_HDMI=y
 CONFIG_SND_SOC_CS42XX8_I2C=y
