--- a/arch/arm/boot/dts/imx6qdl-picosom.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-picosom.dtsi
@@ -83,6 +83,35 @@
 		wlreg_on-supply = <&wlreg_on>;
 	};
 
+	gpio-edm {
+		compatible = "gpio-edm";
+		wl_reg {
+			label = "wl_reg";
+			gpios = <&gpio1 7 1>;
+			dir   = "out";
+		};
+		wifi_host_wake {
+			label = "wifi_host_wake";
+			gpios = <&gpio7 11 0>;
+			dir   = "in";
+		};
+		bt_reg {
+			label = "bt_reg";
+			gpios = <&gpio7 12 1>;
+			dir   = "out";
+		};
+		bt_wake {
+			label = "bt_wake";
+			gpios = <&gpio1 4 0>;
+			dir   = "in";
+		};
+		bt_host_wake {
+			label = "bt_host_wake";
+			gpios = <&gpio1 5 0>;
+			dir   = "in";
+		};
+    };
+
 	sound {
 		compatible = "fsl,imx6-picosom-sgtl5000", 
                              "fsl,imx-audio-sgtl5000";
