picosom-imx6: add pca9554 function to dts file.

--- a/arch/arm/boot/dts/imx6qdl-picosom.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-picosom.dtsi
@@ -430,6 +430,15 @@
 		flip_x=<0>;
 		flip_y=<0>;
 	};
+
+	pca9554: pca9554@25 {
+		compatible = "nxp,pca9554";
+		gpio-controller;
+		#gpio-cells = <2>;
+		#interrupt-cells = <2>;
+		reg = <0x25>;
+	};
+
 };
 
 &i2c3 {
