picosom-imx6: enable PCA953X_IRQ from defconfig.

--- a/arch/arm/configs/picosom-imx6_defconfig
+++ b/arch/arm/configs/picosom-imx6_defconfig
@@ -19,6 +19,7 @@ CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_GPIO_PCA953X=y
+CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_ARCH_MXC=y
 CONFIG_SOC_IMX6Q=y
 CONFIG_SOC_IMX6SL=y
