--- a/arch/arm/boot/dts/imx6qdl-edm1-cf.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-edm1-cf.dtsi
@@ -117,48 +117,6 @@
 			gpios = <&gpio7 8 1>;
 			dir   = "in";
 		};
-
-		bluetooth-on {
-			label = "bluetooth-on";
-			gpios = <&gpio5 21 1>;
-			dir   = "out";
-		};
-		bluetooth-reg-on {
-			label = "bluetooth-reg-on";
-			gpios = <&gpio5 30 1>;
-			dir   = "out";
-		};
-		bluetooth-wake {
-			label = "bluetooth-wake";
-			gpios = <&gpio1 30 1>;
-			dir   = "in";
-		};
-		bluetooth-host-wake {
-			label = "bluetooth-host-wake";
-			gpios = <&gpio5 20 1>;
-			dir   = "in";
-		};
-
-		wifi-ref-on {
-			label = "wifi-ref-on";
-			gpios = <&gpio5 31 1>;
-			dir   = "out";
-		};
-		wifi-rst-n {
-			label = "wifi-rst-n";
-			gpios = <&gpio6 0 1>;
-			dir   = "out";
-		};
-		wifi-reg-on {
-			label = "wifi-reg-on";
-			gpios = <&gpio1 26 1>;
-			dir   = "out";
-		};
-		wifi-host-wake {
-			label = "wifi-host-wake";
-			gpios = <&gpio1 29 1>;
-			dir   = "in";
-		};
 	};
 
 	sound {
@@ -269,6 +227,14 @@
 		status = "okay";
 	};
 
+	bt_rfkill {
+		compatible = "net,rfkill-gpio";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_bt>;
+		name = "bt_rfkill";
+		type = <2>;     /* bluetooth */
+		bt_rfkill_reset-gpios = <&gpio5 21 0>;
+	};
 };
 
 
@@ -1248,14 +1214,7 @@ reference manual.
 				MX6QDL_PAD_GPIO_6__GPIO1_IO06		0x0b0b0		/* ov5640 mipi powerdown */
 				MX6QDL_PAD_GPIO_3__CCM_CLKO2		0x000b0		/* ov5640 mclk */
 				MX6QDL_PAD_EIM_D29__GPIO3_IO29   	0x80000000
-				MX6QDL_PAD_CSI0_VSYNC__GPIO5_IO21	0x80000000	/* bluetooth-on */
-				MX6QDL_PAD_CSI0_DAT12__GPIO5_IO30	0x80000000	/* bluetooth-reg-on */
-				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x80000000	/* bluetooth-wake */
-				MX6QDL_PAD_CSI0_DATA_EN__GPIO5_IO20     0x80000000	/* bluetooth-host-wake */
-				MX6QDL_PAD_CSI0_DAT13__GPIO5_IO31	0x0f0b0		/* wifi-ref-on */
-				MX6QDL_PAD_CSI0_DAT14__GPIO6_IO00	0x0f0b0		/* wifi-rst-n */
-				MX6QDL_PAD_ENET_RXD1__GPIO1_IO26	0x000b0		/* wifi-reg-on */
-				MX6QDL_PAD_ENET_TXD1__GPIO1_IO29	0x80000000	/* wifi-host-wake */
+				MX6QDL_PAD_CSI0_DAT13__GPIO5_IO31       0x0f0b0         /* wifi-bt chip Power Enable */
 			>;
 		};
 
@@ -1264,6 +1223,15 @@ reference manual.
 				MX6QDL_PAD_ENET_RXD0__SPDIF_OUT                 0x1b0b0
 			>;
 	        };
+
+		pinctrl_bt: btgrp {
+			fsl,pins = <
+				MX6QDL_PAD_CSI0_VSYNC__GPIO5_IO21       0x80000000      /* bluetooth-on */
+				MX6QDL_PAD_CSI0_DAT12__GPIO5_IO30       0x80000000      /* bluetooth-reg-on */
+				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30        0x80000000      /* bluetooth-wake */
+				MX6QDL_PAD_CSI0_DATA_EN__GPIO5_IO20     0x80000000      /* bluetooth-host-wake */
+			>;
+		};
 	};
 	gpio {
 		pinctrl_gpio: gpiogrp {
