picosom-imx6_defconfig: add rfkill support

--- a/arch/arm/configs/picosom-imx6_defconfig
+++ b/arch/arm/configs/picosom-imx6_defconfig
@@ -19,7 +19,6 @@ CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_GPIO_PCA953X=y
-CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_ARCH_MXC=y
 CONFIG_SOC_IMX6Q=y
 CONFIG_SOC_IMX6SL=y
@@ -27,7 +26,6 @@ CONFIG_SOC_IMX6SX=y
 CONFIG_SOC_IMX6UL=y
 CONFIG_SOC_IMX7D=y
 # CONFIG_WAND_RFKILL is not set
-CONFIG_BCM43XX_RFKILL=y
 # CONFIG_SWP_EMULATE is not set
 CONFIG_SMP=y
 CONFIG_VMSPLIT_2G=y
@@ -120,7 +118,7 @@ CONFIG_BT_ATH3K=y
 CONFIG_CFG80211=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=y
-CONFIG_RFKILL_INPUT=y
+CONFIG_RFKILL=y
 CONFIG_RFKILL_GPIO=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
@@ -184,7 +182,6 @@ CONFIG_USB_RTL8150=m
 CONFIG_USB_RTL8152=m
 CONFIG_USB_USBNET=m
 CONFIG_USB_NET_CDC_EEM=m
-CONFIG_USB_HSO=y
 CONFIG_ATH_CARDS=y
 CONFIG_ATH6KL=m
 CONFIG_ATH6KL_SDIO=m
@@ -201,6 +198,7 @@ CONFIG_KEYBOARD_IMX=y
 CONFIG_MOUSE_PS2=m
 CONFIG_MOUSE_PS2_ELANTECH=y
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_ADS7846=y
 CONFIG_TOUCHSCREEN_EGALAX=y
 CONFIG_TOUCHSCREEN_ELAN=y
 CONFIG_TOUCHSCREEN_MAX11801=y
@@ -228,6 +226,7 @@ CONFIG_I2C_IMX=y
 CONFIG_SPI=y
 CONFIG_SPI_IMX=y
 CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_PCA953X_IRQ=y
 CONFIG_POWER_SUPPLY=y
 CONFIG_SABRESD_MAX8903=y
 CONFIG_SENSORS_MAX17135=y
@@ -311,6 +310,7 @@ CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
 CONFIG_SND_SOC_IMX_HDMI=y
 CONFIG_SND_SOC_CS42XX8_I2C=y
+CONFIG_HID_MULTITOUCH=y
 CONFIG_HID_SUNPLUS=m
 CONFIG_USB=y
 CONFIG_USB_OTG=y
@@ -357,7 +357,6 @@ CONFIG_MMC_SDHCI_ESDHC_IMX=y
 CONFIG_MXC_IPU=y
 CONFIG_MXC_IPU_V3_PRE=y
 CONFIG_MXC_MIPI_CSI2=y
-CONFIG_MXC_MLB150=m
 CONFIG_MXC_GPU_VIV=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
@@ -458,5 +457,3 @@ CONFIG_CRC7=m
 CONFIG_FONTS=y
 CONFIG_FONT_8x8=y
 CONFIG_FONT_8x16=y
-CONFIG_TOUCHSCREEN_ADS7846=y
-CONFIG_HID_MULTITOUCH=y
