--- a/arch/arm/boot/dts/imx6sx-edm1-cf.dts
+++ b/arch/arm/boot/dts/imx6sx-edm1-cf.dts
@@ -279,25 +279,26 @@
 	status = "disabled";
 
 	display0: display {
-		bits-per-pixel = <16>;
+		bits-per-pixel = <24>;
 		bus-width = <24>;
 
 		display-timings {
 			native-mode = <&timing0>;
 			timing0: timing0 {
-				clock-frequency = <33500000>;
+				clock-frequency = <33260000>;
 				hactive = <800>;
 				vactive = <480>;
-				hback-porch = <89>;
-				hfront-porch = <164>;
+				hback-porch = <46>;
+				hfront-porch = <210>;
 				vback-porch = <23>;
-				vfront-porch = <10>;
-				hsync-len = <10>;
-				vsync-len = <10>;
+				vfront-porch = <22>;
+				hsync-len = <1>;
+				vsync-len = <1>;
 				hsync-active = <0>;
 				vsync-active = <0>;
 				de-active = <1>;
 				pixelclk-active = <0>;
+				interlaced =  <0>;
 			};
 		};
 	};
@@ -325,7 +326,7 @@
 
 		display-timings {
 			native-mode = <&timing1>;
-			timing1: hsd100pxn1 {
+			timing1: hj070na {
 				clock-frequency = <51000000>;
 				hactive = <1024>;
 				vactive = <600>;
