--- a/arch/arm/configs/edm-cf-imx_defconfig
+++ b/arch/arm/configs/edm-cf-imx_defconfig
@@ -155,6 +155,7 @@ CONFIG_SENSORS_FXOS8700=y
 CONFIG_SENSORS_FXAS2100X=y
 CONFIG_EEPROM_AT24=y
 CONFIG_EEPROM_AT25=y
+CONFIG_SENSORS_LIS3_I2C=y
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
 CONFIG_SCSI_MULTI_LUN=y
