--- a/arch/arm/boot/dts/imx6sx-edm1-cf.dts
+++ b/arch/arm/boot/dts/imx6sx-edm1-cf.dts
@@ -383,16 +383,12 @@
 &flexcan1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan1>;
-	trx-en-gpio = <&gpio4 25 GPIO_ACTIVE_LOW>;
-	trx-stby-gpio = <&gpio4 27 GPIO_ACTIVE_LOW>;
 	status = "okay";
 };
 
 &flexcan2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexcan2>;
-	trx-en-gpio = <&gpio4 25 GPIO_ACTIVE_LOW>;
-	trx-stby-gpio = <&gpio4 27 GPIO_ACTIVE_LOW>;
 	status = "okay";
 };
 
@@ -810,15 +806,15 @@
 
 		pinctrl_flexcan1: flexcan1grp {
 			fsl,pins = <
-				MX6SX_PAD_QSPI1B_DQS__CAN1_TX		0x1b020
-				MX6SX_PAD_QSPI1A_SS1_B__CAN1_RX		0x1b020
+				MX6SX_PAD_KEY_COL2__CAN1_TX	0x1b0b0
+				MX6SX_PAD_KEY_ROW2__CAN1_RX	0x1b0b0
 			>;
 		};
 
 		pinctrl_flexcan2: flexcan2grp {
 			fsl,pins = <
-				MX6SX_PAD_QSPI1B_SS1_B__CAN2_RX		0x1b020
-				MX6SX_PAD_QSPI1A_DQS__CAN2_TX		0x1b020
+				MX6SX_PAD_KEY_COL3__CAN2_TX 	0x1b0b0
+				MX6SX_PAD_KEY_ROW3__CAN2_RX	0x1b0b0
 			>;
 		};
 
